# groovygarden

./: .env.example  .gitignore  DATA_FLOW_ARCHITECTURE.md  DATA_STORAGE_STRATEGY.md  IPFS_INTEGRATION.md  README.md  ROADMAP.md  run_tests.py  setup.cfg
.qoder/: settings.json
app/: README.md  index.html  package.json  vite.config.ts
app/docs/: HACKATHON_PLAN.md  IMPLEMENTATION.md  NEON_OPTIMIZATIONS.md  native.md
app/src/: index.css  main.tsx
app/src/auth/: AuthProvider.tsx
app/src/components/: Router.tsx
app/src/components/auth/: BaseSignInButton.tsx  BaseSignInModal.tsx  LoginPrompt.tsx
app/src/components/layout/: Navbar.tsx
app/src/components/onboarding/: FeatureTour.tsx  WelcomeModal.tsx
app/src/components/pages/: ChainView.tsx  Search.tsx  (+5 more)
app/src/hooks/: use-ai.ts  use-auth.ts
app/src/lib/: api-client.ts  api-helpers.ts  api-hooks.ts
app/src/types/: auth-types.ts
docs/: CONFIGURATION.md  ENHANCEMENTS_SUMMARY.md  MONITORING.md  ROADMAP.md
services/: monitoring.py  pyproject.toml  setup_database.py  test_ai.py  test_ai_enhanced.py  test_auth.py  test_computer_vision.py  test_services_validation.py  test_verification.py  test_video_processing.py
services/api/: mock_routes.py  models.py  routes.py  utils.py
services/core/: ai_service.py  chain_moves.py  chain_service.py  dance_chains.py  follows.py  ipfs.py  tableland.py  user.py  user_profiles.py  user_service.py  votes.py  voting_service.py
services/optimizations/: neon_optimizations.py
services/optimizations/migrations/: add_avatar_cid_column.py
services/solar/: access.py  media.py
(+14 files in other folders)
